Managed to be able to test whether two lines collide.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="app/Vector.js"></script>
     <script type="text/javascript" src="app/Cylinder.js"></script>
     <script type="text/javascript" src="app/Boid.js"></script>
+    <script type="text/javascript" src="app/Line.js"></script>
     <script type="text/javascript" src="app/script.js"></script>
   </body>
 </html>
